--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>康文昌的在线HTML 教学小工具</title>
+    <title>这是我的网站，进来学习一下三字经！！</title>
     <style>  
       body {
         margin: 0;
@@ -23,22 +23,22 @@
    padding:15px
    line-height: 1.7px;
    color:red">
-     <p>终于完成了</p>    
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
-     <p>加油吧</p>      
+     <p>人之初，性本善。性相近，习相远。</p>    
+     <p>苟不教，性乃迁。教之道，贵以专。</p>      
+     <p>昔孟母，择邻处。子不学，断机杼。</p>      
+     <p>窦燕山，有义方。教五子，名俱扬。</p>      
+     <p>养不教，父之过。教不严，师之惰。</p>      
+     <p>子不学，非所宜。幼不学，老何为。</p>      
+     <p>玉不琢，不成器。人不学，不知义。</p>      
+     <p>为人子，方少时。亲师友，习礼仪。</p>      
+     <p>香九龄，能温席。孝于亲，所当执。</p>      
+     <p>融四岁，能让梨。弟于长，宜先知。</p>      
+     <p>首孝悌，次见闻。知某数，识某文。</p>      
+     <p>一而十，十而百。百而千，千而万。</p>      
+     <p>三才者，天地人。三光者，日月星。</p>      
+     <p>三纲者，君臣义。父子亲，夫妇顺。</p>      
+     <p>曰春夏，曰秋冬。此四时，运不穷。</p>      
+     <p>曰南北，曰西东。此四方，应乎中。</p>      
     </div>
     <div style="
     background-color:#f1f1f1;
